[package]
name = "zk_sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/arkworks",
    "crates/dusk-plonk",
    "crates/garage-plonk",
    "crates/halo2",
    "crates/jellyfish",
    "crates/o1-proof-systems",
    "crates/plonky2",
]

[[bin]]
name = "test_arkworks"
path = "src/arkworks.rs"

[dependencies]
zk_sudoku_arkworks = { path = "crates/arkworks" }
