[package]
name = "zk_sudoku_dusk_plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-plonk = { version = "0.13" }
dusk-bls12_381 = { version = "0.11", default-features = false, features = [
    "groups",
    "pairings",
    "endo",
] }
dusk-jubjub = { version = "0.12", default-features = false }
