[package]
name = "zk_sudoku_garage_plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
derivative = "2.2.0"

ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }

plonk = { git = "https://github.com/ZK-Garage/plonk", rev = "ec76fd3" }
plonk-core = { git = "https://github.com/ZK-Garage/plonk", rev = "ec76fd3", features = [
    "std",
    "trace",
    "trace-print",
] }

[features]
default = ["parallel", "std"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly-commit/std",
    "ark-poly/std",
    "ark-bls12-381/std",
    "ark-ed-on-bls12-381/std",
]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly-commit/parallel",
    "ark-poly/parallel",
]
