[package]
name = "zk_sudoku_halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false }

plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "ec9dce" }

[features]
default = ["std"]
std = ["rand/std", "rand/std_rng", "rand_core/std"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
