[package]
name = "zk_sudoku_jellyfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = { version = "0.3.1" }

ark-bls12-381 = "0.3.0"
ark-ed-on-bls12-381 = "0.3.0"
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = { version = "0.3.0", features = ["asm"] }
ark-poly = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", default-features = false }

jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish.git", rev = "9bc08d2", default-features = false }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish.git", rev = "9bc08d2", default-features = false }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish.git", rev = "9bc08d2", default-features = false }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish.git", rev = "9bc08d2", default-features = false }

[features]
default = ["parallel"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "jf-plonk/std",
]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "jf-plonk/parallel",
    "jf-utils/parallel",
    "jf-relation/parallel",
    "jf-primitives/parallel",
]
